--- a/css/styles.css
+++ b/css/styles.css
@@ -568,6 +568,10 @@ span.btn-neutral, a.btn-neutral {
   margin-bottom: 10px;
 }
 
+.section-header#certificateHeader {
+  margin-bottom: 30px;
+}
+
 /* Popup */
 .popup {
   background-color: #F9F9FB;
@@ -863,7 +867,7 @@ span.btn-neutral, a.btn-neutral {
   margin-top: 20px;
 }
 
-.form-page .side-to-side:last-of-type .btn {
+.form-page > .side-to-side:last-of-type .btn {
   width: 150px;
 }
 
@@ -1030,7 +1034,7 @@ span.btn-neutral, a.btn-neutral {
 .certificate {
   background-color: white;
   box-shadow: 0 5px 5px -5px rgba(130, 91, 62, 0.3);
-  padding-top: 30px;
+  padding: 30px 0;
   position: sticky;
   top: 0;
   z-index: 2;
@@ -1040,7 +1044,10 @@ span.btn-neutral, a.btn-neutral {
   margin-top: 0 !important;
 }
 
-
+#marriageDetails .input {
+  height: 2rem;
+  border-radius: 5px;
+}
 
 
 /******************************************* User *******************************************/
