--- a/css/styles.css
+++ b/css/styles.css
@@ -569,8 +569,10 @@ span.btn-neutral, a.btn-neutral {
 
 /*************************************************** Popups ***************************************************/
 .popup {
+  animation: slide-down 0.5s ease-out;
   background-color: #F9F9FB;
   border-radius: 10px;
+  box-shadow: 8px 8px 10px rgba(130, 91, 62, 0.8);
   margin: auto;
   min-width: 28%;
   padding: 30px;
@@ -1080,7 +1082,7 @@ span.btn-neutral, a.btn-neutral {
 }
 
 .certificateHeader {
-  animation: certificate-appear 0.5s ease;
+  animation: slide-down 0.5s ease;
   background-color: white;
   box-shadow: 0 5px 5px -5px rgba(130, 91, 62, 0.3);
   padding: 30px 0;
@@ -1500,7 +1502,7 @@ span.btn-neutral, a.btn-neutral {
   }
 }
 
-@keyframes certificate-appear {
+@keyframes slide-down {
   0% {
     transform: translateY(-100%);
   }
